--- a/gelato/Base.lproj/Main.storyboard
+++ b/gelato/Base.lproj/Main.storyboard
@@ -136,14 +136,14 @@
                         <viewLayoutGuide key="safeArea" id="ckN-4f-v8G"/>
                     </view>
                     <navigationItem key="navigationItem" title="My Location" id="4Gu-LG-lWB">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="mik-vT-Q4C">
+                        <barButtonItem key="leftBarButtonItem" id="mik-vT-Q4C">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Jfz-6N-VEx">
                                 <rect key="frame" x="16" y="7" width="39" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Menu"/>
                             </button>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="hJZ-rQ-qlh">
+                        <barButtonItem key="rightBarButtonItem" id="hJZ-rQ-qlh">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dmt-Nx-WsR">
                                 <rect key="frame" x="311" y="7" width="48" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -162,6 +162,7 @@
                         <outlet property="menuViewWidthConstraint" destination="OZr-bf-1PU" id="CLz-it-4Uq"/>
                         <outlet property="titleItem" destination="4Gu-LG-lWB" id="3pD-19-i2z"/>
                         <segue destination="hND-DZ-6wu" kind="show" identifier="biscuitToRestaurant" id="cum-mh-Of3"/>
+                        <segue destination="xgy-2A-xXE" kind="show" identifier="mainToCart" id="ynB-PP-jRf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mkB-sS-A8G" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -328,7 +329,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="EpB-sj-gpD" kind="presentation" id="Qao-SK-9KX"/>
+                                    <action selector="addToCart:" destination="khR-1U-sq1" eventType="touchUpInside" id="dNj-bK-nQi"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -358,50 +359,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uQy-yc-4zw"/>
                     </view>
+                    <connections>
+                        <segue destination="xgy-2A-xXE" kind="show" identifier="mealToCart" id="gCI-Bo-Xck"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PSf-wf-bJW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3956" y="261.57635467980299"/>
-        </scene>
-        <!--Payment View Controller-->
-        <scene sceneID="65c-5E-Ufs">
-            <objects>
-                <viewController id="EpB-sj-gpD" customClass="PaymentViewController" customModule="gelato" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5Eh-CV-C5a">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JfZ-rd-M34" customClass="MMSlidingButton" customModule="gelato" customModuleProvider="target">
-                                <rect key="frame" x="16" y="731" width="343" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="buttonColor">
-                                        <color key="value" red="0.3529411764705882" green="0.90588235294117647" blue="0.78823529411764703" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="buttonText" value="SWIPE TO ORDER"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="dragPointWidth">
-                                        <real key="value" value="50"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="dragPointColor">
-                                        <color key="value" red="0.90588235294117647" green="0.46274509803921571" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="buttonUnlockedText" value="PROCEEDING"/>
-                                </userDefinedRuntimeAttributes>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vmB-3r-59V">
-                                <rect key="frame" x="0.0" y="44" width="375" height="676"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="ikR-Cm-sMU"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="igo-1u-wmF" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="4800.8000000000002" y="261.57635467980299"/>
+            <point key="canvasLocation" x="3956" y="263"/>
         </scene>
         <!--Tracking View Controller-->
         <scene sceneID="qlu-Ye-wHR">
@@ -483,7 +447,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ezT-79-Tfk">
-                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CartTableViewCell" textLabel="Hbs-bZ-yq6" style="IBUITableViewCellStyleDefault" id="t7Y-zQ-zh6">
@@ -521,7 +485,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S3d-CT-U00" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3956" y="-648"/>
+            <point key="canvasLocation" x="4772" y="262"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qA2-2B-60U">
@@ -546,4 +510,7 @@
     <resources>
         <image name="Biscuit" width="150" height="125"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="ynB-PP-jRf"/>
+    </inferredMetricsTieBreakers>
 </document>
